# claude-code-cv-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CV_PARSER.md  app.py  basic_cv_parser.py  cli_cv_parser.py  cv_parser_app.py  cv_parser_server.py  extracted_candidate.json  extracted_cv_data.json  final_cv_parser.py  final_working_parser.py  main.py  micro_parser.py  progressive_parser.py  pyproject.toml  requirements.txt  run_cv_parser.py  sample_cv.txt  simple_cv_parser.py  test_basic.py  test_parser.py  working_cv_parser.py
.claude/: settings.local.json
docs/: SECURITY.md
docs/media/: README.md
examples/: README.md  sample_cv.txt
parsed/: sample_cv_structured.json
src/: __init__.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  candidate.py
src/parsers/: __init__.py  progressive.py
src/utils/: __init__.py  file_processing.py
static/js/: app.js
templates/: base.html  index.html  progressive.html  results.html
